# pull-secret-operator

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  justfile
.github/workflows/: build.yml  pr.yml
chart/pull-secret-operator/: Chart.yaml  values.yaml
chart/pull-secret-operator/crds/: PullSecret.yaml
chart/pull-secret-operator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
chart/pull-secret-operator/templates/tests/: test-connection.yaml
deploy/: example.yaml
docker/: entrypoint.sh
kustomize/: deployment.yaml  kustomization.yaml
src/: crd_watcher.rs  main.rs  metrics.rs  pull_secret.rs
