[package]
name = "pull-secret-operator"
version = "0.1.10"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "kube/native-tls", "kube-runtime/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "kube/rustls-tls", "kube-runtime/rustls-tls"]


[dev-dependencies]
httpmock = "0.4.3"
httpmock-macros = "0.3.0"

[build-dependencies]
auditable-build = "0.1.0"

[dependencies]
auditable = "0.1.0"
env_logger = "0.7.1"
futures = "0.3.5"
kube = { version = "0.39.0", default_features = false, features = ["derive"] }
kube-runtime = { version ="0.39.0", default_features = false }
k8s-openapi = { version = "0.9.0", features = ["v1_18"], default-features = false }
log = "0.4.8"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
serde_yaml = "0.8.12"
tokio = { version = "0.2.21", features = ["full"] }
thiserror = "1.0.21"
reqwest = "0.10.8"
once_cell = "1.4.1"
prometheus = "0.9.0"
prometheus-static-metric = "0.2.0"
hyper = "0.13.7"
anyhow = "1.0.33"
